# api_rocketlc

./: Pipfile  README.md  app.jsx  db_json.py  db_sql.py  docker-compose.yaml  dockerfile  main.py  map.sh  pyproject.toml  requirements.txt  run_docker.md  test_db.py  users_db.json  vercel.json
api/: index.py
db/: users.db  users.db-journal
src/: app.py
src/routes/info_rockets/: main_route.py  ssl.py
src/static/css/: style.css
src/utils/: date_work.py  get_user.py
src/views/: doc.html  index.html
trash/: requirements.txt
trash/db/: test_db.py
trash/src/: app.py
trash/src/utils/: cors_response.py
